--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "react": "^18",
     "react-dom": "^18",
     "react-organizational-chart": "^2.2.1",
-    "react-redux": "^9.0.4"
+    "react-redux": "^9.0.4",
+    "recharts": "^2.10.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.19.27",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
